--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,35 @@
 TODO
 ==============
 
-1. Update grid class to have arm orientation
+X. Update grid class to have arm orientation
 2. Graph class (existing or diy?)
 3. Module data structure
     a. module extends unit
     b. module 2x2s have units
+
+
+Notes
+
+G -> C
+
+make n = root coord(0, 0)
+q.push (n, coord)
+
+while q.notEmpty
+    (n, coord) = pop, add to C
+    for arms of n
+        add to C
+    for neighbors of n
+        determine coords 
+        push
+
+modules will have a matrix for connections:
+    row for neighbors, holds ids of NESW modules
+    row for extended  vs not extended
+    row for connected vs not connected
+
+Map<Module, {E, C}) --> neighbors
+for(Module m: neighbors.keySet())
+
 
 
